Create Item Views

--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -6,5 +6,6 @@
 <!DOCTYPE html>
 
 <html>
-    <h1>Welcome user!</h1>
+<h1>Welcome user!</h1>
+<a asp-action="Index" asp-controller="Item">View wishlist</a>
 </html>
