--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -12,7 +12,7 @@
 <ul>
     @foreach (var Item in Model)
     {
-        <li>@Item.Description <a asp-action="delete" asp-route="Item.Id">delete</a>
+        <li>@Item.Description <a asp-action="delete" asp-route="Item.Id">delete</a></li>
     }
     
 </ul>
